--- a/src/log4net.RabbitMQ.SampleWeb/packages.config
+++ b/src/log4net.RabbitMQ.SampleWeb/packages.config
@@ -6,6 +6,7 @@
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net461" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net461" />
+  <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.zh-Hans" version="4.0.20710.0" targetFramework="net461" />
