--- a/src/log4net.RabbitMQ.Tests/packages.config
+++ b/src/log4net.RabbitMQ.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="RabbitMQ.Client" version="3.6.0" targetFramework="net461" />
   <package id="SharpTestsEx" version="1.1.1" targetFramework="net45" />
   <package id="SharpTestsEx.MVC" version="1.1.1" targetFramework="net45" />
